# TinyRenderer

./: .gitignore  CMakeLists.txt  README.MD  TGAImage.grammar
src/: CMakeLists.txt
src/common/: CMakeLists.txt  line.cpp  line.h  obj.cpp  obj.h  tgaimage.cpp  tgaimage.h  tiny_obj_loader.h  triangle.cpp  triangle.h  triangle_p.cpp  triangle_p.h  types.h
src/lessons/: CMakeLists.txt
src/lessons/lesson0/: CMakeLists.txt  main.cpp
src/lessons/lesson1/: CMakeLists.txt  main.cpp
src/lessons/lesson2/: CMakeLists.txt  flat_shade.cpp  line_sweep.cpp  triangle_render.cpp  triangles_timing.cpp
src/lessons/lesson3/: CMakeLists.txt  main.cpp
